correction problème d'alignement de mon image

--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -27,7 +27,6 @@ body{
 .grid > * {
     grid-column: 1 / -1;
 }
-
 .parallax-bg{
     position: fixed;
     top:0;
@@ -45,6 +44,7 @@ body{
 .header{
     background-color: rgba($premier,0.9);
     overflow-x: hidden;
+    margin-bottom: -24px;
 }
 .header__soustitre{
     color:#BFBFBF;
@@ -529,6 +529,11 @@ p{
         padding-right: 48px;
         grid-template-rows: repeat(7, auto);
     }
+    .header-grid{
+        display: grid;
+        grid-template-columns: repeat(10,1fr);
+        grid-template-rows: repeat(7,auto);
+    }   
     .parallax-bg{
         width: 110%;
         height: 110%;
@@ -541,17 +546,20 @@ p{
     }
     .header__titre{
         font-size: 80px;
-        grid-column: 1/span 5;
+        grid-column: 2/span 4;
+        grid-row: 1;
     }
     .header__soustitre{
-        grid-column: 1/span 5;
+        grid-column: 2/span 4;
         font-size: 40px;
+        grid-row: 2;
     }
     .header__image{
-        grid-column: 6/span 3;
+        grid-column: 6/span 5;
         height: auto;
-        width: 100%;
+        width: 60%;
         margin-bottom: 24px;
+        grid-row: 1/-1;
     }
     .menu__btn{
         display: none;
